# triton-windstorm

./: .gitignore  Cargo.toml  Makefile.toml  README.md  app.webmanifest  index.css  index.html  package-lock.json  package.json  service-worker.js  tailwind.config.js
pkg/: package.d.ts  package.js  package.json  package_bg.wasm  package_bg.wasm.d.ts
src/: index.sass  lib.rs  message.rs  model.rs  storage.rs
src/locale/: en-US.flu  fr-FR.flu  mod.rs
src/messages/: data.rs  database.rs  graphs.rs  index.rs  mod.rs  settings.rs
src/view/: about.rs  data.rs  graphs.rs  index.rs  mod.rs  settings.rs
