[package]
version = "1.12.0"
name = "triton_windstorm"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "^0.3"

[dependencies]
seed = "^0.8"
console_error_panic_hook = "^0.1"
fluent = "^0.15"
unic-langid = "^0.9"
uuid = { version = "^0.8", features = ["v4", "wasm-bindgen"] }
chrono = { version = "^0.4", features = ["wasmbind", "serde"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
web-sys = { version = "^0.3", features = ["Element", "DomTokenList", "Window", "MediaQueryList", "TextMetrics"] }
rand = "^0.8"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
