[package]
version = "1.12.2"
name = "triton_windstorm"
readme = "./README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.30"

[dependencies]
seed = "0.8.0"
console_error_panic_hook = "0.1.6"
fluent = "0.16.0"
unic-langid = "0.9.0"
uuid = { version = "1.0.0", features = ["v4"] }
chrono = { version = "0.4.19", features = ["wasmbind", "serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.64"
web-sys = { version = "0.3.51", features = ["Element", "DomTokenList", "Window", "MediaQueryList", "TextMetrics"] }
rand = "0.8.4"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
