[package]
version = "1.13.1"
name = "triton_windstorm"
readme = "./README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.32"

[dependencies]
seed = "0.9.2"
console_error_panic_hook = "0.1.7"
fluent = "0.16.0"
unic-langid = "0.9.0"
uuid = { version = "1.1.2", features = ["v4"] }
chrono = { version = "0.4.22", features = ["wasmbind", "serde"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
web-sys = { version = "0.3.59", features = ["Element", "DomTokenList", "Window", "MediaQueryList", "TextMetrics"] }
rand = "0.8.5"
pontus_onyx = { version = "0.16.9", features = ["client", "assets"] }
regex = "1.6.0"
instant = "0.1.12"
time = { version = "0.3.13", features = ["parsing"] }
wasm-bindgen = "0.2.82"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
